outputs_20260331-063005-227b62e6/codegen/production/build_logs/compiler_stderr.log
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9n8v87l6\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9n8v87l6\src\egtm_atom_3_phase_inverter_pwm.c:48:35: error: 'IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT' undeclared (first use in this function)
   48 | #define PHASE_U_LS              (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT)  /* validated */
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9n8v87l6\src\egtm_atom_3_phase_inverter_pwm.c:112:62: note: in expansion of macro 'PHASE_U_LS'
  112 |     output[0].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS;
      |                                                              ^~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9n8v87l6\src\egtm_atom_3_phase_inverter_pwm.c:48:35: note: each undeclared identifier is reported only once for each function it appears in
   48 | #define PHASE_U_LS              (&IfxEgtm_ATOM0_0N_TOUT65_P20_9_OUT)  /* validated */
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9n8v87l6\src\egtm_atom_3_phase_inverter_pwm.c:112:62: note: in expansion of macro 'PHASE_U_LS'
  112 |     output[0].complementaryPin      = (IfxEgtm_Pwm_ToutMap *)PHASE_U_LS;
      |                                                              ^~~~~~~~~~
